[tool.poetry]
name = "calendar-bot-example"
version = "0.1.0"
description = ""
authors = ["Pavel Anokhin <p.a.anokhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
calendar-pytba = "^1.0.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
